--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p><span id="destaque"><</span>Caio Gomes <span id="destaque">/></span></>
+        <p>< Caio Gomes/></p>
         <nav>
             <ul>
                 <li><a href="">Sobre</a></li>
@@ -22,14 +22,14 @@
           
        <div class="text"> 
         Hello World
-        <h1>Caio Gomes</h1>
+        <h1 id="destaque">Caio Gomes</h1>
         <a href=""><img src="/Imgs/github02.png" alt=""></a>
         <a href=""><img src="/Imgs/email02.png" alt=""></a>
         <a href=""><img src="/Imgs/linkedin02.png" alt=""></a>
         <br>
         Olá meu nome é Caio ,tenho 16 anos e moro no Méier.
         <br>
-            Sou <span id="destaque">Programador front-end</span> , estou no segundo ano do ensino médio técnicoem informatica 
+            Sou <span id="destaque">Programador front-end</span> , estou no segundo ano do ensino médio técnico em informatica 
             <br>
             pretendo ser programador fullstack.
         </p></div>
@@ -71,42 +71,39 @@
             <div class="conteudo"><div class="porcentagem"></div></div>
         </div>
     </div>
+    <h2>Projetos</h2>
+    <br>
     <div id="Projetos">
-        <h2>Projetos</h2>
+            
         <div>
-            <div class="front"> 
-                <h2>Landing Page</h2>
-                <img src="" alt="">
-                <p></p>
-            </div>
-            <div class="back">
-                <span></span>
-                <span></span>
+                <h3>Landing Page</h3>
+                <img src="/Imgs/proj/01.png" alt="">
+                <p></p>           
+                <p>Esse foi um trabalho da escola sobre cruso de programação</p>
+                <span class="tag">Html</span>
+                <br>
+                <br>
+                <span class="tag">Css</span>
+                <br>
                 <button><a href="https://caio-gomes2007.github.io/Landing-page01.github.io/">Acessar</a></button>
 
-            </div>            
+            </div>        
             <div>
-                <div class="front"> 
-                    <h2></h2>
-                    <img src="" alt="">
-                    <p></p>
-                </div>
-                <div class="back">
-                    <span></span>
-                    <span></span>
-                </div>            
-            </div>        <div>
-                <div class="front"> 
-                    <h2></h2>
-                    <img src="" alt="">
-                    <p></p>
-                </div>
-                <div class="back">
-                    <span></span>
-                    <span></span>
-                </div>            
-            </div>       
-    </div>
-    <footer>©2023 Caio Gomes</footer>
+                    <h3>Site de proteção a carros</h3>
+                    <img src="/Imgs/proj/02.png" alt="">
+                    <p>Esse eu queria treinar a criação de paginas de apresentação</p>
+                    <span class="tag">Html</span>
+                    <br>
+                    <br>
+                    <span class="tag">Css</span>
+                    <br>
+                    <button><a href="https://caio-gomes2007.github.io/site-de-protecao-para-carros.github.io/">Acessar</a></button>
+                </div>  
+            </div>      
+    <footer>
+        <br>
+        <p> ©2023 Caio Gomes</p>
+    </footer>
+    <div id="minifooter"></div>
 </body>
 </html>
