--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </nav>
     </header>
     <div id="sobre">
-            <img src="/Imgs/img-me.jpg" alt="" class="perfil">
+            <img src="Imgs/img-me.jpg" alt="" class="perfil">
           
        <div class="text"> 
         Hello World
         <h1 id="destaque">Caio Gomes</h1>
-        <a href=""><img src="/Imgs/github02.png" alt=""></a>
-        <a href=""><img src="/Imgs/email02.png" alt=""></a>
-        <a href=""><img src="/Imgs/linkedin02.png" alt=""></a>
+        <a href=""><img src="Imgs/github02.png" alt=""></a>
+        <a href=""><img src="Imgs/email02.png" alt=""></a>
+        <a href=""><img src="Imgs/linkedin02.png" alt=""></a>
         <br>
         Olá meu nome é Caio ,tenho 16 anos e moro no Méier.
         <br>
@@ -39,7 +39,7 @@
 
         <div class="Html">
             <h3>Html</h3>
-            <a href="https://www.flaticon.com/br/icones-gratis/html" title="Html icon criado por freepik - flaticon">  <img src="/Imgs/html.png" alt=""></a>
+            <a href="https://www.flaticon.com/br/icones-gratis/html" title="Html icon criado por freepik - flaticon">  <img src="Imgs/html.png" alt=""></a>
             <div class="conteudo">
                 <div class="porcentagem">
 
@@ -50,7 +50,7 @@
        <div class="Css">
             <h3>CSS</h3>
             <a href="https://www.flaticon.com/br/icones-gratis/css" title="Css ícones criados por Pixel perfect - Flaticon">
-                <img src="/Imgs/css-3.png" alt="">
+                <img src="Imgs/css-3.png" alt="">
             </a>
             <div class="conteudo">
                 <div class="porcentagem">
@@ -61,13 +61,13 @@
 
          <div class="javascript">
             <h3>Javascript</h3>
-            <a href="https://www.flaticon.com/br/icones-gratis/javascript" title="Javascript ícones criados por Freepik - Flaticon"><img src="/Imgs/js.png" alt=""></a>
+            <a href="https://www.flaticon.com/br/icones-gratis/javascript" title="Javascript ícones criados por Freepik - Flaticon"><img src="Imgs/js.png" alt=""></a>
             <div class="conteudo"><div class="porcentagem"></div></div>
         </div>
 
         <div class="node">
             <h3>Node js</h3>
-             <a href="https://www.flaticon.com/br/icones-gratis/no-js" title="Nó js ícones criados por Freepik - Flaticon"><img src="/Imgs/node-js.png" alt=""></a>
+             <a href="https://www.flaticon.com/br/icones-gratis/no-js" title="Nó js ícones criados por Freepik - Flaticon"><img src="Imgs/node-js.png" alt=""></a>
             <div class="conteudo"><div class="porcentagem"></div></div>
         </div>
     </div>
@@ -77,7 +77,7 @@
             
         <div>
                 <h3>Landing Page</h3>
-                <img src="/Imgs/proj/01.png" alt="">
+                <img src="Imgs/proj/01.png" alt="">
                 <p></p>           
                 <p>Esse foi um trabalho da escola sobre cruso de programação</p>
                 <span class="tag">Html</span>
@@ -90,7 +90,7 @@
             </div>        
             <div>
                     <h3>Site de proteção a carros</h3>
-                    <img src="/Imgs/proj/02.png" alt="">
+                    <img src="Imgs/proj/02.png" alt="">
                     <p>Esse eu queria treinar a criação de paginas de apresentação</p>
                     <span class="tag">Html</span>
                     <br>
