--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
 <body>
     <header>
         <p>< Caio Gomes/></p>
-        <nav>
-            <ul>
-                <li><a href="">Sobre</a></li>
-                <li><a href="">Skills</a></li>
-                <li><a href="">Projetos</a></li>
-            </ul>
-        </nav>
+        
     </header>
     <div id="sobre">
             <img src="Imgs/img-me.jpg" alt="" class="perfil">
@@ -23,16 +17,18 @@
        <div class="text"> 
         Hello World
         <h1 id="destaque">Caio Gomes</h1>
-        <a href=""><img src="Imgs/github02.png" alt=""></a>
-        <a href=""><img src="Imgs/email02.png" alt=""></a>
-        <a href=""><img src="Imgs/linkedin02.png" alt=""></a>
         <br>
         Olá meu nome é Caio ,tenho 16 anos e moro no Méier.
         <br>
-            Sou <span id="destaque">Programador front-end</span> , estou no segundo ano do ensino médio técnico em informatica 
-            <br>
-            pretendo ser programador fullstack.
-        </p></div>
+        Sou <span id="destaque">Programador front-end</span> , estou no segundo ano do ensino médio técnico em informatica 
+        <br>
+        pretendo ser programador fullstack.
+    </p>
+    <a href=""><img src="Imgs/github02.png" alt=""></a>
+    <a href=""><img src="Imgs/email02.png" alt=""></a>
+    <a href=""><img src="Imgs/linkedin02.png" alt=""></a>
+</div>
+ 
     </div>
     <h2>Skills</h2>
     <div id="skills">
