--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="sobre">
             <img src="Imgs/img-me.jpg" alt="" class="perfil">
           
-       <div class="text"> 
+       <div class="text" style="font-size: 25px;"> 
         Hello World
         <h1 id="destaque">Caio Gomes</h1>
         <br>
