acho que agora vai

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
     </header>
     <div id="sobre">
-            <img src="Imgs/img-me.jpg" alt="" class="perfil">
+            <img src="Imgs/img-me.jpg" alt="" class="perfil" style="width: 30%; margin: -100px 10px 10px 40px;">
           
        <div class="text" style="font-size: 25px;"> 
         Hello World
