cortando coisas desnecessarias

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Caio Gomes</title>
 </head>
 <body>
     <header>
-        <p>< Caio Gomes/></p>
         
     </header>
     <div id="sobre">
@@ -16,11 +18,11 @@
           
        <div class="text" style="font-size: 25px;"> 
         Hello World
-        <h1 id="destaque">Caio Gomes</h1>
+        <h1 id="destaque">< Caio Gomes/></h1>
         <br>
-        Olá meu nome é Caio ,tenho 16 anos e moro no Méier.
+        Olá meu nome é Caio, tenho 16 anos e moro no Méier.
         <br>
-        Sou <span id="destaque">Programador front-end</span> , estou no segundo ano do ensino médio técnico em informatica 
+        Sou <span id="destaque">estudante de programação front-end</span>, estou no segundo ano do ensino médio técnico em informatica 
         <br>
         pretendo ser programador fullstack.
     </p>
