--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <br>
         pretendo ser programador fullstack.
     </p>
-    <a href=""><img src="Imgs/github02.png" alt=""></a>
-    <a href=""><img src="Imgs/email02.png" alt=""></a>
-    <a href=""><img src="Imgs/linkedin02.png" alt=""></a>
+    <a href="https://github.com/Caio-Gomes2007" target="_blank"><img src="Imgs/github02.png" alt="" ></a>                                                                                                       
+    <a href="mailto:caiofgomesrj@gmail.com" target="_blank"><img src="Imgs/email02.png" alt=""></a>
+    <a href="https://www.linkedin.com/in/caio-gomes-87b6a3278/" target="_blank"><img src="Imgs/linkedin02.png" alt=""></a>
 </div>
  
     </div>
@@ -37,7 +37,7 @@
 
         <div class="Html">
             <h3>Html</h3>
-            <a href="https://www.flaticon.com/br/icones-gratis/html" title="Html icon criado por freepik - flaticon">  <img src="Imgs/html.png" alt=""></a>
+            <a href="https://www.flaticon.com/br/icones-gratis/html" title="Html icon criado por freepik - flaticon" target="_blank">  <img src="Imgs/html.png" alt=""></a>
             <div class="conteudo">
                 <div class="porcentagem">
 
@@ -47,7 +47,7 @@
 
        <div class="Css">
             <h3>CSS</h3>
-            <a href="https://www.flaticon.com/br/icones-gratis/css" title="Css ícones criados por Pixel perfect - Flaticon">
+            <a href="https://www.flaticon.com/br/icones-gratis/css" title="Css ícones criados por Pixel perfect - Flaticon" target="_blank">
                 <img src="Imgs/css-3.png" alt="">
             </a>
             <div class="conteudo">
@@ -59,13 +59,13 @@
 
          <div class="javascript">
             <h3>Javascript</h3>
-            <a href="https://www.flaticon.com/br/icones-gratis/javascript" title="Javascript ícones criados por Freepik - Flaticon"><img src="Imgs/js.png" alt=""></a>
+            <a href="https://www.flaticon.com/br/icones-gratis/javascript" title="Javascript ícones criados por Freepik - Flaticon"><img src="Imgs/js.png" alt="" target="_blank"></a>
             <div class="conteudo"><div class="porcentagem"></div></div>
         </div>
 
         <div class="node">
             <h3>Node js</h3>
-             <a href="https://www.flaticon.com/br/icones-gratis/no-js" title="Nó js ícones criados por Freepik - Flaticon"><img src="Imgs/node-js.png" alt=""></a>
+             <a href="https://www.flaticon.com/br/icones-gratis/no-js" title="Nó js ícones criados por Freepik - Flaticon"><img src="Imgs/node-js.png" alt="" target="_blank"></a>
             <div class="conteudo"><div class="porcentagem"></div></div>
         </div>
     </div>
@@ -83,7 +83,7 @@
                 <br>
                 <span class="tag">Css</span>
                 <br>
-                <button><a href="https://caio-gomes2007.github.io/Landing-page01.github.io/">Acessar</a></button>
+                <button><a href="https://caio-gomes2007.github.io/Landing-page01.github.io/" target="_blank">Acessar</a></button>
 
             </div>        
             <div>
@@ -95,7 +95,7 @@
                     <br>
                     <span class="tag">Css</span>
                     <br>
-                    <button><a href="https://caio-gomes2007.github.io/site-de-protecao-para-carros.github.io/">Acessar</a></button>
+                    <button><a href="https://caio-gomes2007.github.io/site-de-protecao-para-carros.github.io/" target="_blank">Acessar</a></button>
                 </div>  
             </div>      
     <footer>
