correct button bug

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="Imgs/img-me.jpg" alt="" class="perfil" style="width: 30%; margin: -100px 10px 10px 40px;">
           
        <div class="text" style="font-size: 25px;"> 
-        Hello World
+        Hello World!
         <h1 id="destaque">< Caio Gomes/></h1>
         <br>
         Olá meu nome é Caio, tenho 16 anos e moro no Méier.
@@ -83,25 +83,27 @@
                 <br>
                 <span class="tag">Css</span>
                 <br>
-                <button><a href="https://caio-gomes2007.github.io/Landing-page01.github.io/" target="_blank">Acessar</a></button>
+                <button onclick="githubLandingPage()">Acessar</button>
 
             </div>        
             <div>
                     <h3>Site de proteção a carros</h3>
-                    <img src="Imgs/proj/02.png" alt="">
+                    <img src="" alt="">
                     <p>Esse eu queria treinar a criação de paginas de apresentação</p>
                     <span class="tag">Html</span>
                     <br>
                     <br>
                     <span class="tag">Css</span>
                     <br>
-                    <button><a href="https://caio-gomes2007.github.io/site-de-protecao-para-carros.github.io/" target="_blank">Acessar</a></button>
+                   <button onclick="githubLandingPage()">Acessar</button>
                 </div>  
+                
             </div>      
     <footer>
         <br>
         <p> ©2023 Caio Gomes</p>
     </footer>
     <div id="minifooter"></div>
+    <script src="script.js"></script>
 </body>
 </html>
