--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Imgs/pc-icon.png" type="">
     <title>Caio Gomes</title>
 </head>
 <body>
@@ -87,15 +88,16 @@
 
             </div>        
             <div>
-                    <h3>Site de proteção a carros</h3>
-                    <img src="" alt="">
-                    <p>Esse eu queria treinar a criação de paginas de apresentação</p>
+                    <h3>Site de login e cadastro</h3>
+                    <img src="Imgs/proj/02.png" alt="">
+                    <p>Um site simples com uma animação flip e um pouco de javascript</p>
                     <span class="tag">Html</span>
-                    <br>
-                    <br>
                     <span class="tag">Css</span>
                     <br>
-                   <button onclick="githubLandingPage()">Acessar</button>
+                    <br>
+                    <span class="tag">Javascript</span>
+                    <br>
+                   <button onclick="githubCadastro()">Acessar</button>
                 </div>  
                 
             </div>      
