update of fonts

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <br>
         Olá meu nome é Caio, tenho 16 anos e moro no Méier.
         <br>
-        Sou <span id="destaque">estudante de programação front-end</span>, estou no segundo ano do ensino médio técnico em informatica 
+        Sou <span id="destaque">estudante de programação front-end</span>, estou no segundo ano do ensino médio técnico em informatica,
         <br>
         pretendo ser programador fullstack.
     </p>
@@ -38,7 +38,7 @@
 
         <div class="Html">
             <h3>Html</h3>
-            <a href="https://www.flaticon.com/br/icones-gratis/html" title="Html icon criado por freepik - flaticon" target="_blank">  <img src="Imgs/html.png" alt=""></a>
+           <img src="Imgs/html.png" alt="">
             <div class="conteudo">
                 <div class="porcentagem">
 
@@ -48,9 +48,8 @@
 
        <div class="Css">
             <h3>CSS</h3>
-            <a href="https://www.flaticon.com/br/icones-gratis/css" title="Css ícones criados por Pixel perfect - Flaticon" target="_blank">
+            
                 <img src="Imgs/css-3.png" alt="">
-            </a>
             <div class="conteudo">
                 <div class="porcentagem">
 
@@ -60,13 +59,13 @@
 
          <div class="javascript">
             <h3>Javascript</h3>
-            <a href="https://www.flaticon.com/br/icones-gratis/javascript" title="Javascript ícones criados por Freepik - Flaticon"><img src="Imgs/js.png" alt="" target="_blank"></a>
+           <img src="Imgs/js.png" alt="" target="_blank">
             <div class="conteudo"><div class="porcentagem"></div></div>
         </div>
 
         <div class="node">
             <h3>Node js</h3>
-             <a href="https://www.flaticon.com/br/icones-gratis/no-js" title="Nó js ícones criados por Freepik - Flaticon"><img src="Imgs/node-js.png" alt="" target="_blank"></a>
+             <img src="Imgs/node-js.png" alt="" target="_blank">
             <div class="conteudo"><div class="porcentagem"></div></div>
         </div>
     </div>
@@ -104,6 +103,10 @@
     <footer>
         <br>
         <p> ©2023 Caio Gomes</p>
+        Css ícones criados por Pixel perfect - Flaticon,
+        Html icon criado por freepik - flaticon,
+        Javascript ícones criados por Freepik - Flaticon,
+        Nó js ícones criados por Freepik - Flaticon,
     </footer>
     <div id="minifooter"></div>
     <script src="script.js"></script>
